// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders learn react link 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <h2>
          Calculator
        </h2>
        <p
          style="margin-top: 3%; text-align: center; padding: 10px;"
        >
          Let' do some math : 
        </p>
        <div
          class="tableau"
        />
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            AC
          </button>
          <button
            class="aucun"
            type="button"
          >
            +/-
          </button>
          <button
            class="aucun"
            type="button"
          >
            %
          </button>
          <button
            class="orange"
            type="button"
          >
            ÷
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            7
          </button>
          <button
            class="aucun"
            type="button"
          >
            8
          </button>
          <button
            class="aucun"
            type="button"
          >
            9
          </button>
          <button
            class="orange"
            type="button"
          >
            x
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            4
          </button>
          <button
            class="aucun"
            type="button"
          >
            5
          </button>
          <button
            class="aucun"
            type="button"
          >
            6
          </button>
          <button
            class="orange"
            type="button"
          >
            -
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            1
          </button>
          <button
            class="aucun"
            type="button"
          >
            2
          </button>
          <button
            class="aucun"
            type="button"
          >
            3
          </button>
          <button
            class="orange"
            type="button"
          >
            +
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="deux"
            type="button"
          >
            0
          </button>
          <button
            class="dernier"
            type="button"
          >
            .
          </button>
          <button
            class="dernier orange"
            type="button"
          >
            =
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section>
      <h2>
        Calculator
      </h2>
      <p
        style="margin-top: 3%; text-align: center; padding: 10px;"
      >
        Let' do some math : 
      </p>
      <div
        class="tableau"
      />
      <div
        class="ligne"
      >
        <button
          class="aucun"
          type="button"
        >
          AC
        </button>
        <button
          class="aucun"
          type="button"
        >
          +/-
        </button>
        <button
          class="aucun"
          type="button"
        >
          %
        </button>
        <button
          class="orange"
          type="button"
        >
          ÷
        </button>
      </div>
      <div
        class="ligne"
      >
        <button
          class="aucun"
          type="button"
        >
          7
        </button>
        <button
          class="aucun"
          type="button"
        >
          8
        </button>
        <button
          class="aucun"
          type="button"
        >
          9
        </button>
        <button
          class="orange"
          type="button"
        >
          x
        </button>
      </div>
      <div
        class="ligne"
      >
        <button
          class="aucun"
          type="button"
        >
          4
        </button>
        <button
          class="aucun"
          type="button"
        >
          5
        </button>
        <button
          class="aucun"
          type="button"
        >
          6
        </button>
        <button
          class="orange"
          type="button"
        >
          -
        </button>
      </div>
      <div
        class="ligne"
      >
        <button
          class="aucun"
          type="button"
        >
          1
        </button>
        <button
          class="aucun"
          type="button"
        >
          2
        </button>
        <button
          class="aucun"
          type="button"
        >
          3
        </button>
        <button
          class="orange"
          type="button"
        >
          +
        </button>
      </div>
      <div
        class="ligne"
      >
        <button
          class="deux"
          type="button"
        >
          0
        </button>
        <button
          class="dernier"
          type="button"
        >
          .
        </button>
        <button
          class="dernier orange"
          type="button"
        >
          =
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders learn react link 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <h2>
          Calculator
        </h2>
        <p
          style="margin-top: 3%; text-align: center; padding: 10px;"
        >
          Let' do some math : 
        </p>
        <div
          class="tableau"
        />
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            AC
          </button>
          <button
            class="aucun"
            type="button"
          >
            +/-
          </button>
          <button
            class="aucun"
            type="button"
          >
            %
          </button>
          <button
            class="orange"
            type="button"
          >
            ÷
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            7
          </button>
          <button
            class="aucun"
            type="button"
          >
            8
          </button>
          <button
            class="aucun"
            type="button"
          >
            9
          </button>
          <button
            class="orange"
            type="button"
          >
            x
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            4
          </button>
          <button
            class="aucun"
            type="button"
          >
            5
          </button>
          <button
            class="aucun"
            type="button"
          >
            6
          </button>
          <button
            class="orange"
            type="button"
          >
            -
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            1
          </button>
          <button
            class="aucun"
            type="button"
          >
            2
          </button>
          <button
            class="aucun"
            type="button"
          >
            3
          </button>
          <button
            class="orange"
            type="button"
          >
            +
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="deux"
            type="button"
          >
            0
          </button>
          <button
            class="dernier"
            type="button"
          >
            .
          </button>
          <button
            class="dernier orange"
            type="button"
          >
            =
          </button>
        </div>
      </section>
    </div>
    <div>
      <div
        class="home"
      >
        <h2>
          Home Welcome
        </h2>
        <p>
          Hello everyone, this is just a page, for trying Hello everyone, this is just a page, for trying Dans cette leçon, nous nous sommes concentrés principalement sur les options CSS dont vous disposez dans l’ARC. Si vous voulez en savoir plus sur le soutien CSS de l’ARC et sur la façon de le personnaliser, lisez la documentation de l’ARC, en particulier la section Styles et actifs.
        </p>
        <p>
          Dans cette leçon, nous nous sommes concentrés principalement sur les options CSS dont vous disposez dans l’ARC. Si vous voulez en savoir plus sur le soutien CSS de l’ARC et sur la façon de le personnaliser, lisez la documentation de l’ARC, en particulier la section Styles et actifs.
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="home"
    >
      <h2>
        Home Welcome
      </h2>
      <p>
        Hello everyone, this is just a page, for trying Hello everyone, this is just a page, for trying Dans cette leçon, nous nous sommes concentrés principalement sur les options CSS dont vous disposez dans l’ARC. Si vous voulez en savoir plus sur le soutien CSS de l’ARC et sur la façon de le personnaliser, lisez la documentation de l’ARC, en particulier la section Styles et actifs.
      </p>
      <p>
        Dans cette leçon, nous nous sommes concentrés principalement sur les options CSS dont vous disposez dans l’ARC. Si vous voulez en savoir plus sur le soutien CSS de l’ARC et sur la façon de le personnaliser, lisez la documentation de l’ARC, en particulier la section Styles et actifs.
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders learn react link 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <h2>
          Calculator
        </h2>
        <p
          style="margin-top: 3%; text-align: center; padding: 10px;"
        >
          Let' do some math : 
        </p>
        <div
          class="tableau"
        />
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            AC
          </button>
          <button
            class="aucun"
            type="button"
          >
            +/-
          </button>
          <button
            class="aucun"
            type="button"
          >
            %
          </button>
          <button
            class="orange"
            type="button"
          >
            ÷
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            7
          </button>
          <button
            class="aucun"
            type="button"
          >
            8
          </button>
          <button
            class="aucun"
            type="button"
          >
            9
          </button>
          <button
            class="orange"
            type="button"
          >
            x
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            4
          </button>
          <button
            class="aucun"
            type="button"
          >
            5
          </button>
          <button
            class="aucun"
            type="button"
          >
            6
          </button>
          <button
            class="orange"
            type="button"
          >
            -
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="aucun"
            type="button"
          >
            1
          </button>
          <button
            class="aucun"
            type="button"
          >
            2
          </button>
          <button
            class="aucun"
            type="button"
          >
            3
          </button>
          <button
            class="orange"
            type="button"
          >
            +
          </button>
        </div>
        <div
          class="ligne"
        >
          <button
            class="deux"
            type="button"
          >
            0
          </button>
          <button
            class="dernier"
            type="button"
          >
            .
          </button>
          <button
            class="dernier orange"
            type="button"
          >
            =
          </button>
        </div>
      </section>
    </div>
    <div>
      <div
        class="home"
      >
        <h2>
          Home Welcome
        </h2>
        <p>
          Hello everyone, this is just a page, for trying Hello everyone, this is just a page, for trying Dans cette leçon, nous nous sommes concentrés principalement sur les options CSS dont vous disposez dans l’ARC. Si vous voulez en savoir plus sur le soutien CSS de l’ARC et sur la façon de le personnaliser, lisez la documentation de l’ARC, en particulier la section Styles et actifs.
        </p>
        <p>
          Dans cette leçon, nous nous sommes concentrés principalement sur les options CSS dont vous disposez dans l’ARC. Si vous voulez en savoir plus sur le soutien CSS de l’ARC et sur la façon de le personnaliser, lisez la documentation de l’ARC, en particulier la section Styles et actifs.
        </p>
      </div>
    </div>
    <div>
      <div>
        <p>
          Loading..
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <p>
        Loading..
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
